--- a/translations/messages.nl.xlf
+++ b/translations/messages.nl.xlf
@@ -922,6 +922,14 @@
         <source>listing.title_actions</source>
         <target>__listing.title_actions</target>
       </trans-unit>
+      <trans-unit id="fkXL.k6" resname="user.not_valid_email">
+        <source>user.not_valid_email</source>
+        <target>Invalid email</target>
+      </trans-unit>
+      <trans-unit id="HjWW.NS" resname="user.not_valid_password">
+        <source>user.not_valid_password</source>
+        <target>Invalid password</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
