--- a/translations/messages.nl.xlf
+++ b/translations/messages.nl.xlf
@@ -1494,5 +1494,17 @@
         <target>Kies taal</target>
       </segment>
     </unit>
+    <unit id="7whLbH8" name="user.new_user">
+      <segment>
+        <source>user.new_user</source>
+        <target>Nieuwe gebruiker</target>
+      </segment>
+    </unit>
+    <unit id="hiE9jap" name="password.suggested">
+      <segment>
+        <source>password.suggested</source>
+        <target><![CDATA[Voorgesteld sterk wachtwoord: <code>%password%</code>]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
