--- a/translations/messages.nl.xlf
+++ b/translations/messages.nl.xlf
@@ -1506,5 +1506,47 @@
         <target><![CDATA[Voorgesteld sterk wachtwoord: <code>%password%</code>]]></target>
       </segment>
     </unit>
+    <unit id="TtIlBDd" name="caption.edit_image">
+      <segment>
+        <source>caption.edit_image</source>
+        <target>Bewerk afbeelding</target>
+      </segment>
+    </unit>
+    <unit id="fLOd6Zd" name="field.cropX">
+      <segment>
+        <source>field.cropX</source>
+        <target>Uitsnede X</target>
+      </segment>
+    </unit>
+    <unit id="hi98HIj" name="field.cropY">
+      <segment>
+        <source>field.cropY</source>
+        <target>Uitsnede Y</target>
+      </segment>
+    </unit>
+    <unit id="PHOpD5y" name="field.cropZoom">
+      <segment>
+        <source>field.cropZoom</source>
+        <target>Zoomfactor uitsnede</target>
+      </segment>
+    </unit>
+    <unit id="BQBmQHT" name="field.cropYPostfix">
+      <segment>
+        <source>field.cropYPostfix</source>
+        <target>Positie van uitsnede op de Y-as, van 0-100. </target>
+      </segment>
+    </unit>
+    <unit id="Sd_AbmV" name="field.cropXPostfix">
+      <segment>
+        <source>field.cropXPostfix</source>
+        <target>Positie van uitsnede op de X-as, van 0-100. </target>
+      </segment>
+    </unit>
+    <unit id="tn6Z8wY" name="field.cropZoomPostfix">
+      <segment>
+        <source>field.cropZoomPostfix</source>
+        <target>Zoom-niveau van uitsnede, van 1-10.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
