--- a/translations/messages.nl.xlf
+++ b/translations/messages.nl.xlf
@@ -1185,7 +1185,7 @@
     <unit id="pn22p7q" name="listing.placeholder_filter">
       <segment>
         <source>listing.placeholder_filter</source>
-        <target>Trefwoord …</target>
+        <target>Trefwoord om op te filteren…</target>
       </segment>
     </unit>
     <unit id="ni4zApC" name="listing.button_filter">
@@ -1540,6 +1540,18 @@
       <segment>
         <source>field.cropZoomPostfix</source>
         <target>Zoom-niveau van uitsnede, van 1-10.</target>
+      </segment>
+    </unit>
+    <unit id="hp554Ds" name="listing.option_select_sortby">
+      <segment>
+        <source>listing.option_select_sortby</source>
+        <target>Kies Veldnaam om te sorteren…</target>
+      </segment>
+    </unit>
+    <unit id="n.3JZvX" name="title.contentType">
+      <segment>
+        <source>title.contentType</source>
+        <target>ContentType</target>
       </segment>
     </unit>
   </file>
