session info shown on view users

--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -1977,5 +1977,23 @@
         <target>User has been disabled successfully!</target>
       </segment>
     </unit>
+    <unit id="Npkio79" name="listing.title_session_expires">
+      <segment>
+        <source>listing.title_session_expires</source>
+        <target>Session expires</target>
+      </segment>
+    </unit>
+    <unit id="mmUDcto" name="listing.title_ip_address">
+      <segment>
+        <source>listing.title_ip_address</source>
+        <target>IP address</target>
+      </segment>
+    </unit>
+    <unit id="x9qAwrz" name="listing.title_browser">
+      <segment>
+        <source>listing.title_browser</source>
+        <target>Browser / platform</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
