--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -2055,5 +2055,11 @@
         <target>Move down</target>
       </segment>
     </unit>
+    <unit id="BFARQEU" name="extensions.button_detailed_view">
+      <segment>
+        <source>extensions.button_detailed_view</source>
+        <target>View details</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
